# secure-agent

./: .env.example  .gitignore  CLAUDE.md  orchestrator.py  pyproject.toml
docs/: app-roles.md
infra/modules/: ai-foundry.bicep  app-registration.md  keyvault.bicep
src/: auth.py  config.py  main.py  mcp_server.py
src/agent/: __init__.py  foundry_agent.py  guardrails.py  system_prompt.txt
src/auth/: __init__.py  entra_config.py  msal_client.py  obo_client.py  rbac.py  token_validator.py
src/graph/: __init__.py  graph_client.py
src/routes/: __init__.py  auth.py  chat.py  health.py
src/tools/: __init__.py  base_tool.py  calendar_tool.py  email_tool.py  mcp_server.py  sharepoint_tool.py
tests/: test_api.py  test_auth.py  test_mcp_server.py
tests/integration/: integration_token_check.py  test_foundry_agent.py
tests/unit/: test_auth_route.py  test_calendar_tool.py  test_chat_route.py  test_config.py  test_email_tool.py  test_entra_config.py  test_foundry_agent_guardrails.py  test_foundry_agent_tool_discovery.py  test_graph_client.py  test_guardrails.py  test_health_route.py  test_mcp_tools_server.py  test_msal_client.py  test_obo_client.py  test_rbac.py  test_sharepoint_tool.py  test_token_validator.py
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  msalConfig.ts  styles.css
