[project]
name = "secure-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "fastmcp>=0.12.0",
    "httpx>=0.28.1",
    "langchain-ollama>=1.1.0",
    "load-dotenv>=0.1.0",
    "mcp>=1.2.0",
    "msal>=1.36.0",
    "pyjwt[crypto]>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
]
